Bug 434008: Readonly custom field texts appear too small Patch By Guy Pyrzak <guy.pyrzak@gmail.com> r=mkanat, a=mkanat

--- a/skins/standard/global.css
+++ b/skins/standard/global.css
@@ -366,6 +366,7 @@ table.attachment_info td {
 /* For bug fields */
 .uneditable_textarea {
     width: 30em;
+    font-size: medium;
 }
 
 div.user_match {
